--- a/react-ui/src/lib/components/components.module.sass
+++ b/react-ui/src/lib/components/components.module.sass
@@ -10,10 +10,20 @@
 .button
   border: 0
   outline: 0
+  transition: opacity .2s, background-color .2s
   border-radius: 4px
+  width: 130px
   height: 32px
-  padding: 0 15px
   background-color: teal
   font-size: 16px
   font-weight: bold
   color: white
+
+  &:hover
+    background-color: darkcyan
+
+  &:disabled
+    background-color: gray
+
+    &:hover
+      background-color: gray
